--- a/app/views/ideas/index.html.erb
+++ b/app/views/ideas/index.html.erb
@@ -32,6 +32,10 @@
     <div class="px-6 py-8 h-full">
       <div class="font-bold text-xl mb-2"><%= idea.description %></div>
       <p class="text-sm text-gray-700 "><%= idea.author %></p>
+      <div class="mt-4">
+        <%= link_to 'Delete', idea_path(idea), method: :delete, class: 'text-white bg-red-700 hover:bg-red-800 focus:ring-4 focus:ring-red-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-red-600 dark:hover:bg-red-700 focus:outline-none dark:focus:ring-red-800',data: { turbo_confirm: 'Are you sure?', "turbo-method": :delete} %>
+        <%= link_to 'Edit', edit_idea_path(idea), class: 'text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 me-2 mb-2 dark:bg-blue-600 dark:hover:bg-blue-700 focus:outline-none dark:focus:ring-blue-800' %>
+      </div>
     </div>
   </div>
 <% end %>
